# recordclass

./: .gitignore  .hgignore  ACKS  MANIFEST.in  README.md  appveyor.yml  cleanup.sh  dev-requirements.txt  pyproject.toml  pytest.ini  setup.py  test_all.py  test_performance.py
.github/workflows/: python-package-wheel.yml  python-package.yml
examples/: Readme.ipynb  Untitled.ipynb  Untitled1.ipynb  asrecord.ipynb  check_memory_usage_dataobject.py  comparisons.ipynb  comparisons2.ipynb  comparisons_so.ipynb  copy.deepcopy.ipynb  csv_and_dataobject.ipynb  csv_example.ipynb  csv_example2.ipynb  dataobjects_by_exaample.ipynb  decision_tree.ipynb  do_mem_profile.py  ensure_noleak_dataobject.py  ensure_noleak_datatype.py  ensure_noleak_datatype2.py  ensure_noleak_recordclass2.py  ensure_noleak_structclass.py  evaluate_performance.py  example.txt  example_datatypes.ipynb  examples_from_README.ipynb  fixed_dictlike.ipynb  fraction_dataobject.ipynb  gc_less_classes.ipynb  microlanguage.ipynb  millions_of_objects.ipynb  millions_of_objects.py  numpy_index.ipynb  objects_without_cyclic_GC.ipynb  performance_cgc.ipynb  performance_comparison.ipynb  performance_comparison.py  psutil_memsize.ipynb  recorclass_description.ipynb  reduce_info_in_dict.ipynb  reduce_memory_footprint_in_python.ipynb  reduce_memory_footprint_in_python_ru.ipynb  (+16 more)
examples/issues/: check_dill.py  class_level_attrs.ipynb  dataobject_defaults_enum.ipynb  dataobject_dill.ipynb  dataobject_invalid_kw.ipynb  dataobject_pickle.ipynb  dataobject_reset_defaults.ipynb  recordclass_kwargs.ipynb  subclass_readonly.ipynb
(+50 files in other folders)
